2016-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in:
	  Change handling of test filenames for regression tests, patch #266 by Peter Dons Tychsen.

2016-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Fix handling of __z88dk_fastcall in specifier merging.

2016-01-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (strVal): free utf_8 and suppress warning

2016-01-25 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/pcode.c,
	  src/pic14/ralloc.c:
	  More use the logical constants.

2016-01-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  Improve DWARF support for stm8 ELF, picked from patch #255 by Peter Dons Tychsen.
	* src/SDCCsymt.c:
	  Fix handling of preserved regs in specifier merging.

2016-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic16/pcode.c,
	  src/pic16/pcodepeep.c:
	  More use the logical constants.

2016-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic14/pcode.c,
	  src/pic14/pcoderegs.c,
	  src/pic14/ralloc.c:
	  More use the logical constants.

2016-01-24 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/gen.c,
	  src/pic14/pcode.c,
	  src/pic14/pcode.h:
	  Add support the ASRF, LSLF and LSRF instructions
	  (enhanced intructions of pic14): feature-requests #484

	* src/pic14/gen.c,
	  src/pic14/gen.h:
	  On more place I exchanged the "char *" to "const char *".

2016-01-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCast.c
	* src/SDCCast.h
	* src/SDCCutil.c
	* src/SDCCutil.h
	  Format inline asm coding style.

2016-01-23 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac
	* debugger/mcs51/configure
	* debugger/mcs51/configure.ac
	* support/cpp/configure
	* support/cpp/configure.ac
	* support/packihx/configure
	* support/packihx/configure.ac
	  Try to use C99 first.
	* src/SDCC.lex
	  Remove a duplicate function definition.
	* src/SDCC.y